2017-11-30  Arjun Shankar  <arjun@redhat.com>

	[BZ #22375]
	CVE-2017-17426
	* malloc/malloc.c (__libc_malloc): Use checked_request2size
	instead of request2size.

2017-11-02  Florian Weimer  <fweimer@redhat.com>

	[BZ #22332]
	* posix/tst-glob-tilde.c (do_noescape): New variable.
	(one_test): Process it.
	(do_test): Set do_noescape.  Add unescaping test case.

2017-10-22  Paul Eggert <eggert@cs.ucla.edu>

	[BZ #22332]
	* posix/glob.c (__glob): Fix buffer overflow during GLOB_TILDE
	unescaping.

2017-10-23  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (_int_malloc): Add SINGLE_THREAD_P path.

2017-10-23  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (__libc_malloc): Add SINGLE_THREAD_P path.
	(__libc_realloc): Likewise.
	(_mid_memalign): Likewise.
	(__libc_calloc): Likewise.

2017-10-20  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (sysdep-cancel.h): Add include.

2017-10-20  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (_int_free): Add SINGLE_THREAD_P fast paths.

2017-10-19  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (_int_free): Fix deadlock bug in consistency check.

2017-08-31  Florian Weimer  <fweimer@redhat.com>

	* malloc/malloc.c (_int_free): Remove locked variable and related
	asserts.

2017-08-31  Florian Weimer  <fweimer@redhat.com>

	* malloc/malloc.c (top_check): Change return type to void.  Remove
	internal_function.
	* malloc/hooks.c (top_check): Likewise.
	(malloc_check, realloc_check, memalign_check): Adjust.

2017-08-30  Florian Weimer  <fweimer@redhat.com>

	* malloc/malloc.c (ARENA_CORRUPTION_BIT, arena_is_corrupt)
	(set_arena_corrupt): Remove definitions.
	(mtrim): Do not check for corrupt arena.
	* malloc/arena.c (arena_lock, reused_arena, arena_get_retry):
	Likewise.

2017-08-30  Florian Weimer  <fweimer@redhat.com>

	[BZ #21754]
	* malloc/arena.c (TUNABLE_CALLBACK set_mallopt_check): Do not set
	check_action.
	(ptmalloc_init): Do not set or use check_action.