@@ -63,6 +63,7 @@ The following bugs are resolved with this release:
     occur with -O3
   [21987] Fix sparc32 bits/long-double.h
   [22051] libc: zero terminator in the middle of glibc's .eh_frame
+  [22052] malloc failed to compile with GCC 7 and -O3
   [22078] nss_files performance issue in hosts multi mode
   [22093] x86: Add x86_64 to x86-64 HWCAP
   [22095] resolv: Fix memory leak with OOM during resolv.conf parsing
